# rqm-braket

./: AGENTS.md  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
examples/: basic_local_simulator.py  bell_state_demo.py  compiled_program_demo.py
src/rqm_braket/: __init__.py  api.py  backend.py  circuits.py  devices.py  execution.py  results.py  translator.py  translators.py  types.py
tests/: test_api.py  test_backend_api.py  test_devices.py  test_execution.py  test_imports.py  test_new_execution.py  test_results.py  test_roundtrip.py  test_rqm_core_bridge.py  test_translator.py  test_translators.py
