[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rqm-braket"
version = "0.1.0"
description = "AWS Braket bridge layer for the Resonant Quantum Mechanics ecosystem."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RQM Technologies" }
]
keywords = [
  "rqm",
  "quantum",
  "aws-braket",
  "braket",
  "quaternion",
  "spinor",
  "bloch",
  "su2",
  "quantum-computing"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "rqm-core>=0.1.0",
  "amazon-braket-sdk>=1.80.0"
]

[project.urls]
Homepage = "https://github.com/RQM-Technologies-dev/rqm-braket"
Source = "https://github.com/RQM-Technologies-dev/rqm-braket"
Issues = "https://github.com/RQM-Technologies-dev/rqm-braket/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"
