[build-system]
requires = ["setuptools>=77", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "rqm-braket"
dynamic = ["version"]
description = "Amazon Braket backend adapter for the RQM ecosystem."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "RQM Technologies" }
]
keywords = [
  "rqm",
  "quantum",
  "aws-braket-sdk",
  "braket",
  "quantum-computing",
  "quantum-backend"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "amazon-braket-sdk>=1.80.0",
  "rqm-core>=0.1.0"
]

[project.urls]
Homepage = "https://github.com/RQM-Technologies-dev/rqm-braket"
Source = "https://github.com/RQM-Technologies-dev/rqm-braket"
Issues = "https://github.com/RQM-Technologies-dev/rqm-braket/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
tag_regex = "^v(?P<version>\\d+\\.\\d+\\.\\d+)$"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"